--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <p>HTML allows moving images:</p>
 
-<img src="rickroll.gif" alt="Computer man" style="width:48px;height:48px;">
+<img src="IMG_1044.gif" alt="Computer man" style="width:48px;height:48px;">
 
 </body>
 </html>
